--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-groups.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-groups.css
@@ -114,7 +114,9 @@ content-query{
     width :250px;
   }
 }
-
+#tabPropsId{
+  margin-bottom: 20px;
+}
 /* === TOGGLE BUTTONS === */
 label.radio-inline {
   padding: 0;
@@ -157,4 +159,16 @@ label.radio-inline:hover > span {
 }
 .align-radio-generate-input span{
   vertical-align: initial;
+}
+
+/* === GROUP PROPERTIES === */
+.info h4{
+  color: #222D42AA;
+  font-size: 1.2em;
+  font-weight: normal;
+  margin-bottom: 4px;
+  margin-top: 10px;
+}
+#nodeProp{
+  margin-top: 20px;
 }
