--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -130,6 +130,19 @@ body > .container-fluid > .row > div {
   display: none;
 }
 
+.markdown-icon {
+  width: 25px;
+  margin: 10px;
+}
+
+#markdown-info {
+  color: #938ea2;
+  font-style: italic;
+  font-size: 0.8em;
+  margin-bottom: 10px;
+  margin-left: 15px;
+}
+
 /* ===== TECHNIQUES & METHODS ===== */
 .col-techniques,
 .col-methods{
