--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-plugins.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-plugins.css
@@ -86,3 +86,7 @@
 .table-license tr > td:last-child{
   padding-left: 10px;
 }
+
+.skin-yellow .tooltip > .tooltip-inner {
+  padding: 0px !important;
+}
