Fixes #17547: Multiple problems with inherited (group, node) properties

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeProperties.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeProperties.html
@@ -65,11 +65,14 @@
                  <td ng-class="{'is-edited':isEdited(property.name)}">
                    <div ng-if="!isEdited(property.name)">
                      {{ property.name }}
-                     <span ng-if="property.provider !== undefined && property.provider !== 'inherited'" class='rudder-label label-provider label-sm' data-toggle='tooltip' data-placement='top' data-html='true' title="This node property is managed by its provider <b>‘{{ property.provider }}</b>’, and can not be modified manually. Check Rudder’s settings to adjust this provider’s configuration." data-container="body">
+                     <span ng-if="property.provider !== undefined && property.provider !== 'inherited' && property.provider !== 'overridden'" class='rudder-label label-provider label-sm' data-toggle='tooltip' data-placement='top' data-html='true' title="This property is managed by its provider <b>‘{{ property.provider }}</b>’, and can not be modified manually. Check Rudder’s settings to adjust this provider’s configuration." data-container="body">
                        {{ property.provider }}
                      </span>
-                     <span ng-if="property.parents !== undefined" class='rudder-label label-provider label-sm' data-toggle='tooltip' data-placement='top' data-html='true' title="This node property is inherited from these group or global parameters: <div>{{ property.parents }}</div>." data-container="body">
+                     <span ng-if="property.provider === 'inherited'" class='rudder-label label-provider label-sm' data-toggle='tooltip' data-placement='top' data-html='true' title="This property is inherited from these group(s) or global parameter: <div>{{ property.parents }}</div>." data-container="body">
                        inherited
+                     </span>
+                     <span ng-if="property.provider === 'overridden'" class='rudder-label label-provider label-sm' data-toggle='tooltip' data-placement='top' data-html='true' title="This property is overridden on this object and was inherited from these group(s) or global parameter: <div>{{ property.parents }}</div>." data-container="body">
+                       overridden
                      </span>
                    </div>
                    <div ng-if="isEdited(property.name)">
@@ -103,7 +106,7 @@
                    </div>
                  </td>
                  <td ng-if="$parent.hasEditRight" class="text-center" ng-class="{'default-actions':!isEdited(property.name), 'edit-actions is-edited':isEdited(property.name)}">
-                   <div ng-if="!isEdited(property.name) && property.rights !== 'read-only'">
+                   <div ng-if="!isEdited(property.name) && property.rights !== 'read-only' && (property.provider === undefined || property.provider === 'overridden')">
                      <span class="action-icon fa fa-pencil" ng-click="editProperty(property)" title="Edit"></span>
                      <span class="action-icon fa fa-times text-danger" ng-click="popupDeletion(property.name, $index)" title="Delete"></span>
                    </div>
