--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -784,6 +784,8 @@ ul.files-list > li > .remove-item:hover{
 }
 .method-details .form-control{
   padding: 4px 6px;
+  font-family: monospace;
+  font-size: 14px;
 }
 .method-details select.form-control:not([size]):not([multiple]) {
   height: calc(2.25rem);
@@ -961,6 +963,10 @@ ul.list-unstyled > li{
   position: relative;
   padding: 0;
 }
+.method .method-param{
+  flex: 1;
+  align-items: baseline;
+}
 .method .method-condition ~ div:before,
 .method .method-condition > label:before {
   content: "";
@@ -1014,6 +1020,9 @@ ul.list-unstyled > li{
   outline: none !important;
   width: auto !important;
   padding: 0;
+  font-family: monospace;
+  font-size: 14px;
+  min-height: 28px;
 }
 .method .show-doc,
 .method .edit-method{
@@ -1114,12 +1123,13 @@ ul.list-unstyled > li{
 .method-details-footer > .btn{
   margin-left: 10px;
 }
-#methods .method-name{
-  margin-bottom: 2px;
-}
 .method-content{
-  height: 28px;
+  min-height: 35px;
   display: flex;
+  position: relative;
+}
+.method-errors{
+  flex: 0;
 }
 .warns{
   margin-top: 2px;
@@ -1127,7 +1137,8 @@ ul.list-unstyled > li{
 .warn-param{
   background-color: #b9c2cc;
   color: #fff;
-  padding: 2px 8px 2px 3px;
+  padding: 0px 8px 0px 0px;
+  height: 28px;
   border-radius: 20px;
   display: inline-block;
   font-size: .9em;
@@ -1145,7 +1156,7 @@ ul.list-unstyled > li{
 }
 .warn-param b {
   background-color: #00000055;
-  padding: 2px 6px;
+  padding: 2px 8px;
   border-radius: 20px;
   margin-right: 2px;
 }
