Fixes #17627: Select node state in settings is confusiing for read_only user

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-node.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-node.css
@@ -388,3 +388,11 @@ pre.display-keys > label{
 .info-card.critical .card-info h4{
   color: #C80004;
 }
+
+/* SETTINGS TAB */
+.node-submit + .currentNodeState {
+  display: none;
+}
+.currentNodeState {
+  font-size: 14px;
+}
