Fixes #16032: Inconsistent fonts in technical logs

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-datatable.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-datatable.css
@@ -466,8 +466,7 @@ td.listclose:after {
 }
 
 .dtrg-group td::before {
-  content : "\f013  Run start date: ";
-  font-family: FontAwesome;
+  content : "Run start date: ";
 }
 
 table.dataTable tr.dtrg-group td {
