Fixes #16402: Cannot set Compliance reporting mode on \"Non compliant only\" in settings tab

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -2603,6 +2603,14 @@ form input.dyngroupReloadingButton, form button#launchDebugScriptButton{
   float:left;
   width:100%;
 }
+
+.compliance-form:not(.ng-hide) + .agent-run-form > .page-title{
+  border-bottom: none;
+  font-size: 1.4em !important;
+  margin-bottom: 6px;
+  margin-top: 12px;
+  color: #333 !important;
+}
 /* SPINNERS */
 .btn i.fa-spin {
   position: absolute;
