Fixes #17707: Change cursor to pointer when we choose an action

--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -316,6 +316,7 @@ body > .container-fluid > .row > div {
   font-size: 14px;
   padding: 10px 14px;
   transition-duration: .2s;
+  cursor: pointer;
 }
 .main-header .dropdown-menu > li:nth-child(1) > a{
   color: #9bc832;
